--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "jlboes",
-    "repositoryName": "jlboes",
+    "repositoryName": "jlboes.github.io",
     "branch": "master"
   },
   "theme": {
