--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "jlboes",
-    "repositoryName": "jlboes.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"jlboes","repositoryName":"jlboes.github.io","branch":"master"},"site":{"title":"Ecommerce Explained","url":"https://jlboes.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//jlboes.github.io/themes/Casper"}}
