Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"jlboes","repositoryName":"jlboes.github.io","branch":"master"},"site":{"title":"Ecommerce Explained","googleAnalytics":"UA-64683148-1","url":"https://jlboes.github.io"},"socialnetwork":{},"theme":{"name":"roon","url":"//jlboes.github.io/themes/roon"}}
+{"meta":{"username":"jlboes","repositoryName":"jlboes.github.io","branch":"master"},"site":{"title":"Ecommerce Explained","googleAnalytics":"UA-64683148-1","url":"https://jlboes.github.io"},"socialnetwork":{},"theme":{"name":"ichi","url":"//jlboes.github.io/themes/ichi"}}
